--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,17 @@
 # Document:
 # http://simiki.org/docs/configuration.html
 
-url: 
-title: 
+url: http://wiekern.github.io 
+title: wiekernWiki
 keywords: 
 description: 
-author: 
+author: wieKern
+
+default_ext: md
+pygments: true
+debug: false
 
 deploy:
   - type: git
-    remote:
-    branch:
+    remote: origin
+    branch: gh-pages
